--- a/EurekaService/eurekaservice/说明.md
+++ b/EurekaService/eurekaservice/说明.md
@@ -33,9 +33,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 ```
 
-![1568187116700](C:\Users\庞志阳\AppData\Roaming\Typora\typora-user-images\1568187116700.png)
-
-
+![image text](https://github.com/pzygit/SpringCloudStart/blob/master/image/1568187116700.png)
 
 
 
